added pictures to the section

--- a/index.html
+++ b/index.html
@@ -88,7 +88,49 @@
             <button type="button">online-booking</button>
         </section>
         <section>
-            
+            <ul>
+                <li>
+                    <span>600</span><sup>+</sup>
+                    <p>Satisfied customers per day</p>
+                </li>
+                <li>
+                    <span>50</span><sup>+</sup>
+                    <p>Awards for excellent service</p>
+                </li>
+                <li>
+                    <span>20</span><sup>+</sup>
+                    <p>Kyiv’s best barbers</p>
+                </li>
+                <li>
+                    <span>100</span><sup>+</sup>
+                    <p>Gifts for regular customers</p>
+                </li>
+            </ul>
+            <p>Old traditional school</p>
+            <h2>¿Why people come to us?</h2>
+            <p>Only good things are said about us. But it's better to see and feel 1 time than read 10 times.</p>
+        </section>
+        <section>
+            <p>For true enjoyers of the atmosphere</p>
+            <h2>Our barbers</h2>
+            <ul>
+                <li>
+                    <img src="./img/barber1.jpg" alt="barber shave">
+                    <p>John Smith</p>
+                        <p>Extreme Barber</p>
+                </li>
+                <li>
+                    <img src="./img/barber2.jpg" alt="cutting hair">
+                    <p>Michele Doe</p>
+                    <p>Extreme Barber</p>
+                </li>
+                <li>
+                    <img src="./img/barber3.jpg" alt="linning haircut">
+                    <p>Alan Black</p>
+                    <p>Extreme Barber</p>
+                </li>
+            </ul>
+                            
         </section>
     </main>
     <footer></footer>
