--- a/index.html
+++ b/index.html
@@ -115,24 +115,69 @@
             <h2>Our barbers</h2>
             <ul>
                 <li>
-                    <img src="./img/barber1.jpg" alt="barber shave">
+                    <img src="./img/barber1.jpg" alt="our barbers">
                     <p>John Smith</p>
-                        <p>Extreme Barber</p>
+                    <p>Extreme Barber</p>
+                    <ul>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                    </ul>
                 </li>
                 <li>
-                    <img src="./img/barber2.jpg" alt="cutting hair">
+                    <img src="./img/barber2.jpg" alt="our barbers">
                     <p>Michele Doe</p>
                     <p>Extreme Barber</p>
+                    <ul>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                    </ul>
                 </li>
                 <li>
-                    <img src="./img/barber3.jpg" alt="linning haircut">
+                    <img src="./img/barber3.jpg" alt="our barbers">
                     <p>Alan Black</p>
                     <p>Extreme Barber</p>
+                    <ul>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                    </ul>
                 </li>
-            </ul>
-                            
+            </ul>            
+        </section>
+        <section>
+            <p>In Latin, "barba" means "beard"</p>
+            <h2>Gallery</h2>
+            <img src="./img/gallery1.jpg" alt="our work in barbershop">
+            <img src="./img/gallery2.jpg" alt="our work in barbershop">
+            <img src="./img/gallery3.jpg" alt="our work in barbershop">
+            <img src="./img/gallery4.jpg" alt="our work in barbershop">
+        </section>
+        <section>
+            <h2>Online-booking</h2>
+        </section>
+        <section>
+            <address>
+           <ul>
+            <li><a href="https://goo.gl/maps/b8mZ3bDuTdyTP6wMA" target="_blank" rel="noopener, noreferrer nofollow">st. Vasylkivska, 7A Kiev, 08132</a></li>
+            <li><a href="tel:+380441111111">+38 044 111 11 11</a></li>
+           <li> <a href="mailto:barbershop@email.com">barbershop@email.com</a></li>
+           </ul>
+        </address>
+        <p>Working hours</p>
+        <p>Every day from 9:00 to 22:00</p>
         </section>
     </main>
-    <footer></footer>
+    <footer>
+        <p>&#169;Copyright 2020</p>
+        <ul>
+            <li><a href="" rel="noopener noreferrer nofollow">Instagram</a></li>
+            <li><a href="" rel="noopener noreferrer nofollow">Youtube</a></li>
+        </ul>
+    </footer>
 </body>
 </html>
