--- a/index.html
+++ b/index.html
@@ -1,183 +1,209 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Barbershop</title>
-</head>
-<body>
-    <header>
-        <a href="">
-        <img src="./img/logo.svg" alt="logo" width="69", height="55">
-        </a>
-        <nav>
-        <ul>
-            <li><a href="">About</a></li>
-            <li><a href="">Services and prices</a></li>
-            <li><a href="">Barbers</a></li>
-            <li><a href="">Contacts</a></li>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&family=Raleway:wght@700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./css/main.min.css" />
+  </head>
+  <body class="page">
+    <header class="header container">
+      <a href="" class="header__link link">
+        <img src="./img/logo.svg" alt="logo" width="69" height="55" />
+      </a>
+      <nav class="navigation">
+        <ul class="navigation__list list">
+          <li class="navigation__item"><a href="" class="navigation__link link">About</a></li>
+          <li class="navigation__item"><a href="" class="navigation__link link"></a>Services and prices</a></li>
+          <li class="navigation__item"><a href="" class="navigation__link link"></a>Barbers</a></li>
+          <li class="navigation__item"><a href="" class="navigation__link link"></a>Contacts</a></li>
         </ul>
-        </nav>
-        <a href="tel:+380441111111">+38 044 111 11 11</a>
-        <button type="button">Online-booking</button>
+      </nav>
+      <a class="contacts" href="tel:+380441111111">+38 044 111 11 11</a>
+      <button class="button" type="button">Online-booking</button>
     </header>
-    <main>
-        <section>
-            <p>A hair salon for men in Kyiv</p>
-            <h1>BarberShop</h1>
-            <p>We are experts in trendy men’s haircuts. We work quickly, carefully and with style.</p>
+    <main class="container">
+      <section class="hero">
+        <p class="hero__sub-title">A hair salon for men in Kyiv</p>
+        <h1 class="hero__title">BarberShop</h1>
+        <p class="hero__text">
+          We are experts in trendy men’s haircuts. We work quickly, carefully
+          and with style.
+        </p>
+        <ul class="hero__list list">
+          <li class="hero__item"><a href="" rel="noopener noreferrer nofollow" class="hero__link link" ></a>Instagram</a></li>
+          <li class="hero__item"><a href="" rel="noopener noreferrer nofollow" class="hero__link link">Youtube</a></li>
+        </ul>
+      </section>
+      <section>
+        <ul>
+          <li><img src="./img/img_1.jpg" alt="Barbershop grooming" /></li>
+          <li><img src="./img/img_2.jpg" alt="Barbershop cutshair" /></li>
+        </ul>
+        <p>About</p>
+        <h2>Best Barbershop in your city</h2>
+        <p>
+          If you want to add more confidence to your image, you should
+          definitely visit us.
+        </p>
+        <p>
+          We are a team that never stops at what has been achieved and are
+          thirsty for changes. And when you fall into the hands of our master,
+          you will never be the same again. We are a team that is always "on the
+          same wave" with clients. Therefore, we are always ready to improve
+          everyone who comes to us!
+        </p>
+        <button type="button">ONLINE-BOOKING</button>
+      </section>
+      <section>
+        <p>Spend your time with the best masters</p>
+        <h2>Services and prices</h2>
+        <ul>
+          <li>
+            <p>Men’s haircut</p>
+            <p>from 300 uah.</p>
+          </li>
+          <li>
+            <p>Beard trim</p>
+            <p>from 300 uah.</p>
+          </li>
+          <li>
+            <p>Mustache trim</p>
+            <p>from 200 uah.</p>
+          </li>
+          <li>
+            <p>Straight razor shave</p>
+            <p>from 200 uah.</p>
+          </li>
+        </ul>
+        <ul>
+          <li>
+            <p>Trainee’s haircut</p>
+            <p>from 50 uah.</p>
+          </li>
+          <li>
+            <p>Haircut under the nozzle</p>
+            <p>from 200 uah.</p>
+          </li>
+          <li>
+            <p>Children’s haircut (0-12 y.o.)</p>
+            <p>from 300 uah.</p>
+          </li>
+          <li>
+            <p>Camouflage of gray hair</p>
+            <p>from 200 uah.</p>
+          </li>
+        </ul>
+        <button type="button">online-booking</button>
+      </section>
+      <section>
+        <ul>
+          <li>
+            <span>600</span><sup>+</sup>
+            <p>Satisfied customers per day</p>
+          </li>
+          <li>
+            <span>50</span><sup>+</sup>
+            <p>Awards for excellent service</p>
+          </li>
+          <li>
+            <span>20</span><sup>+</sup>
+            <p>Kyiv’s best barbers</p>
+          </li>
+          <li>
+            <span>100</span><sup>+</sup>
+            <p>Gifts for regular customers</p>
+          </li>
+        </ul>
+        <p>Old traditional school</p>
+        <h2>¿Why people come to us?</h2>
+        <p>
+          Only good things are said about us. But it's better to see and feel 1
+          time than read 10 times.
+        </p>
+      </section>
+      <section>
+        <p>For true enjoyers of the atmosphere</p>
+        <h2>Our barbers</h2>
+        <ul>
+          <li>
+            <img src="./img/barber1.jpg" alt="our barbers" />
+            <p>John Smith</p>
+            <p>Extreme Barber</p>
             <ul>
-                <li><a href="" rel="noopener noreferrer nofollow" >Instagram</a></li>
-                <li><a href="" rel="noopener noreferrer nofollow">Youtube</a></li>
+              <li></li>
+              <li></li>
+              <li></li>
+              <li></li>
             </ul>
-        </section>
-        <section>
+          </li>
+          <li>
+            <img src="./img/barber2.jpg" alt="our barbers" />
+            <p>Michele Doe</p>
+            <p>Extreme Barber</p>
             <ul>
-                <li><img src="./img/img_1.jpg" alt="Barbershop grooming"></li>
-                <li><img src="./img/img_2.jpg" alt="Barbershop cutshair"></li>
-                
+              <li></li>
+              <li></li>
+              <li></li>
+              <li></li>
             </ul>
-            <p>About</p>
-            <h2>Best Barbershop in your city</h2>
-            <p>If you want to add more confidence to your image, you should definitely visit us.</p>
-            <p>We are a team that never stops at what has been achieved and are thirsty for changes. And when you fall into the hands
-            of our master, you will never be the same again. We are a team that is always "on the same wave" with clients.
-            Therefore, we are always ready to improve everyone who comes to us!</p>
-            <button type="button">ONLINE-BOOKING</button>
-        </section>
-        <section>
-            <p>Spend your time with the best masters</p>
-            <h2>Services and prices</h2>
+          </li>
+          <li>
+            <img src="./img/barber3.jpg" alt="our barbers" />
+            <p>Alan Black</p>
+            <p>Extreme Barber</p>
             <ul>
-                <li>
-                    <p>Men’s haircut</p>
-                    <p>from 300 uah.</p>
-                </li>
-                <li>
-                    <p>Beard trim</p>
-                    <p>from 300 uah.</p>
-                </li>
-                <li>
-                    <p>Mustache trim</p>
-                    <p>from 200 uah.</p>
-                </li>
-                <li>
-                    <p>Straight razor shave</p>
-                    <p>from 200 uah.</p>
-                </li>
+              <li></li>
+              <li></li>
+              <li></li>
+              <li></li>
             </ul>
-            <ul>
-                <li>
-                    <p>Trainee’s haircut</p>
-                    <p>from 50 uah.</p>
-                </li>
-                <li>
-                    <p>Haircut under the nozzle</p>
-                    <p>from 200 uah.</p>
-                </li>
-                <li>
-                    <p>Children’s haircut (0-12 y.o.)</p>
-                    <p>from 300 uah.</p>
-                </li>
-                <li>
-                    <p>Camouflage of gray hair</p>
-                    <p>from 200 uah.</p>
-                </li>
-            </ul>
-            <button type="button">online-booking</button>
-        </section>
-        <section>
-            <ul>
-                <li>
-                    <span>600</span><sup>+</sup>
-                    <p>Satisfied customers per day</p>
-                </li>
-                <li>
-                    <span>50</span><sup>+</sup>
-                    <p>Awards for excellent service</p>
-                </li>
-                <li>
-                    <span>20</span><sup>+</sup>
-                    <p>Kyiv’s best barbers</p>
-                </li>
-                <li>
-                    <span>100</span><sup>+</sup>
-                    <p>Gifts for regular customers</p>
-                </li>
-            </ul>
-            <p>Old traditional school</p>
-            <h2>¿Why people come to us?</h2>
-            <p>Only good things are said about us. But it's better to see and feel 1 time than read 10 times.</p>
-        </section>
-        <section>
-            <p>For true enjoyers of the atmosphere</p>
-            <h2>Our barbers</h2>
-            <ul>
-                <li>
-                    <img src="./img/barber1.jpg" alt="our barbers">
-                    <p>John Smith</p>
-                    <p>Extreme Barber</p>
-                    <ul>
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                    </ul>
-                </li>
-                <li>
-                    <img src="./img/barber2.jpg" alt="our barbers">
-                    <p>Michele Doe</p>
-                    <p>Extreme Barber</p>
-                    <ul>
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                    </ul>
-                </li>
-                <li>
-                    <img src="./img/barber3.jpg" alt="our barbers">
-                    <p>Alan Black</p>
-                    <p>Extreme Barber</p>
-                    <ul>
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                    </ul>
-                </li>
-            </ul>            
-        </section>
-        <section>
-            <p>In Latin, "barba" means "beard"</p>
-            <h2>Gallery</h2>
-            <img src="./img/gallery1.jpg" alt="our work in barbershop">
-            <img src="./img/gallery2.jpg" alt="our work in barbershop">
-            <img src="./img/gallery3.jpg" alt="our work in barbershop">
-            <img src="./img/gallery4.jpg" alt="our work in barbershop">
-        </section>
-        <section>
-            <h2>Online-booking</h2>
-        </section>
-        <section>
-            <address>
-           <ul>
-            <li><a href="https://goo.gl/maps/b8mZ3bDuTdyTP6wMA" target="_blank" rel="noopener, noreferrer nofollow">st. Vasylkivska, 7A Kiev, 08132</a></li>
+          </li>
+        </ul>
+      </section>
+      <section>
+        <p>In Latin, "barba" means "beard"</p>
+        <h2>Gallery</h2>
+        <img src="./img/gallery1.jpg" alt="our work in barbershop" />
+        <img src="./img/gallery2.jpg" alt="our work in barbershop" />
+        <img src="./img/gallery3.jpg" alt="our work in barbershop" />
+        <img src="./img/gallery4.jpg" alt="our work in barbershop" />
+      </section>
+      <section>
+        <h2>Online-booking</h2>
+      </section>
+      <section>
+        <h2>Contacts</h2>
+        <address>
+          <ul>
+            <li>
+              <a
+                href="https://goo.gl/maps/b8mZ3bDuTdyTP6wMA"
+                target="_blank"
+                rel="noopener, noreferrer nofollow"
+                >st. Vasylkivska, 7A Kiev, 08132</a
+              >
+            </li>
             <li><a href="tel:+380441111111">+38 044 111 11 11</a></li>
-           <li> <a href="mailto:barbershop@email.com">barbershop@email.com</a></li>
-           </ul>
+            <li>
+              <a href="mailto:barbershop@email.com">barbershop@email.com</a>
+            </li>
+          </ul>
         </address>
         <p>Working hours</p>
         <p>Every day from 9:00 to 22:00</p>
-        </section>
+      </section>
     </main>
     <footer>
-        <p>&#169;Copyright 2020</p>
-        <ul>
-            <li><a href="" rel="noopener noreferrer nofollow">Instagram</a></li>
-            <li><a href="" rel="noopener noreferrer nofollow">Youtube</a></li>
-        </ul>
+      <p>&#169;Copyright 2020</p>
+      <ul>
+        <li><a href="" rel="noopener noreferrer nofollow">Instagram</a></li>
+        <li><a href="" rel="noopener noreferrer nofollow">Youtube</a></li>
+      </ul>
     </footer>
-</body>
+  </body>
 </html>
