--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     <link rel="stylesheet" href="./css/main.min.css" />
   </head>
   <body class="page">
-    <header class="header container">
+    <header class="header">
+      <div class="container">
       <a href="" class="header__link link">
         <img src="./img/logo.svg" alt="logo" width="69" height="55" />
       </a>
@@ -23,11 +24,13 @@
           <li class="navigation__item"><a href="" class="navigation__link link"></a>Contacts</a></li>
         </ul>
       </nav>
-      <a class="contacts" href="tel:+380441111111">+38 044 111 11 11</a>
+      <a class="contact" href="tel:+380441111111">+38 044 111 11 11</a>
       <button class="button" type="button">Online-booking</button>
+      </div>
     </header>
-    <main class="container">
+    <main>
       <section class="hero">
+        <div class="container">
         <p class="hero__sub-title">A hair salon for men in Kyiv</p>
         <h1 class="hero__title">BarberShop</h1>
         <p class="hero__text">
@@ -38,102 +41,110 @@
           <li class="hero__item"><a href="" rel="noopener noreferrer nofollow" class="hero__link link" ></a>Instagram</a></li>
           <li class="hero__item"><a href="" rel="noopener noreferrer nofollow" class="hero__link link">Youtube</a></li>
         </ul>
+        </div>
       </section>
-      <section>
-        <ul>
-          <li><img src="./img/img_1.jpg" alt="Barbershop grooming" /></li>
-          <li><img src="./img/img_2.jpg" alt="Barbershop cutshair" /></li>
+      <section class="about">
+        <div class="container">
+        <ul class="about__list list">
+          <li class="about__item"><img src="./img/img_1.jpg" alt="Barbershop grooming" /></li>
+          <li class="about__item"><img src="./img/img_2.jpg" alt="Barbershop haircut" /></li>
         </ul>
-        <p>About</p>
-        <h2>Best Barbershop in your city</h2>
-        <p>
+        <p class="about__text">About</p>
+        <h2 class="about__title">Best Barbershop in your city</h2>
+        <p class="about__description">
           If you want to add more confidence to your image, you should
           definitely visit us.
         </p>
-        <p>
+        <p class="about__specification">
           We are a team that never stops at what has been achieved and are
           thirsty for changes. And when you fall into the hands of our master,
           you will never be the same again. We are a team that is always "on the
           same wave" with clients. Therefore, we are always ready to improve
           everyone who comes to us!
         </p>
-        <button type="button">ONLINE-BOOKING</button>
+        <button  class="button" type="button">ONLINE-BOOKING</button>
+        </div>
       </section>
-      <section>
-        <p>Spend your time with the best masters</p>
-        <h2>Services and prices</h2>
-        <ul>
-          <li>
-            <p>Men’s haircut</p>
-            <p>from 300 uah.</p>
+      <section class="prices">
+        <div class="container">
+        <p class="prices__text"> Spend your time with the best masters</p>
+        <h2 class="prices__title">Services and prices</h2>
+        <ul class="prices__list list">
+          <li class="prices__item">
+            <p class="prices__element">Men’s haircut</p>
+            <p class="prices__sum">from 300 uah.</p>
           </li>
-          <li>
-            <p>Beard trim</p>
-            <p>from 300 uah.</p>
+          <li class="prices__item">
+            <p class="prices__element">Beard trim</p>
+            <p class="prices__sum">from 300 uah.</p>
           </li>
-          <li>
-            <p>Mustache trim</p>
-            <p>from 200 uah.</p>
+          <li class="prices__item">
+            <p class="prices__element">Mustache trim</p>
+            <p class="prices__sum">from 200 uah.</p>
           </li>
-          <li>
-            <p>Straight razor shave</p>
-            <p>from 200 uah.</p>
+          <li class="prices__item">
+            <p class="prices__element">Straight razor shave</p>
+            <p class="prices__sum">from 200 uah.</p>
           </li>
         </ul>
         <ul>
-          <li>
-            <p>Trainee’s haircut</p>
-            <p>from 50 uah.</p>
+          <li class="prices__item">
+            <p class="prices__element"></p>Trainee’s haircut</p>
+            <p class="prices__sum">from 50 uah.</p>
           </li>
-          <li>
-            <p>Haircut under the nozzle</p>
-            <p>from 200 uah.</p>
+          <li class="prices__item">
+            <p class="prices__element"></p>Haircut under the nozzle</p>
+            <p class="prices__sum">from 200 uah.</p>
           </li>
-          <li>
-            <p>Children’s haircut (0-12 y.o.)</p>
-            <p>from 300 uah.</p>
+          <li class="prices__item">
+            <p class="prices__element"></p>Children’s haircut (0-12 y.o.)</p>
+            <p class="prices__sum">from 300 uah.</p>
           </li>
-          <li>
-            <p>Camouflage of gray hair</p>
-            <p>from 200 uah.</p>
+          <li class="prices__item">
+            <p class="prices__element"></p>Camouflage of gray hair</p>
+            <p class="prices__sum">from 200 uah.</p>
           </li>
         </ul>
-        <button type="button">online-booking</button>
+        <button class="button" type="button">online-booking</button>
+        </div>
       </section>
-      <section>
-        <ul>
-          <li>
+      <section class="benefits">
+        <div class="container">
+        <ul class="benefits__list list">
+          <li class="benefits__item">
             <span>600</span><sup>+</sup>
-            <p>Satisfied customers per day</p>
+            <p class="benefits__text">Satisfied customers per day</p>
           </li>
-          <li>
+          <li class="benefits__item">
             <span>50</span><sup>+</sup>
-            <p>Awards for excellent service</p>
+            <p class="benefits__text">Awards for excellent service</p>
           </li>
-          <li>
+          <li class="benefits__item">
             <span>20</span><sup>+</sup>
-            <p>Kyiv’s best barbers</p>
+            <p class="benefits__text">Kyiv’s best barbers</p>
           </li>
-          <li>
+          <li class="benefits__item">
             <span>100</span><sup>+</sup>
-            <p>Gifts for regular customers</p>
+            <p class="benefits__text">Gifts for regular customers</p>
           </li>
         </ul>
-        <p>Old traditional school</p>
-        <h2>¿Why people come to us?</h2>
-        <p>
+        <p class="benefits__pretitle">Old traditional school</p>
+        <h2 class="benefits__title">¿Why people come to us?</h2>
+        <p class="benefits__after-title">
           Only good things are said about us. But it's better to see and feel 1
           time than read 10 times.
         </p>
+        </div>
       </section>
-      <section>
-        <p>For true enjoyers of the atmosphere</p>
-        <h2>Our barbers</h2>
-        <ul>
-          <li>
+      <section class="barbers">
+        <div class="container">
+        <p class="barbers__pretitle">For true enjoyers of the atmosphere</p>
+        <h2 class="barbers__title">Our barbers</h2>
+        <ul class="barbers__list list">
+          <li class="barbers__member">
             <img src="./img/barber1.jpg" alt="our barbers" />
-            <p>John Smith</p>
-            <p>Extreme Barber</p>
+            <p class="barbers__name">John Smith</p>
+            <p class="barbers__position">Extreme Barber</p>
             <ul>
               <li></li>
               <li></li>
@@ -141,10 +152,10 @@
               <li></li>
             </ul>
           </li>
-          <li>
+          <li class="barbers__member">
             <img src="./img/barber2.jpg" alt="our barbers" />
-            <p>Michele Doe</p>
-            <p>Extreme Barber</p>
+            <p class="barbers__name">Michele Doe</p>
+            <p class="barbers__position">Extreme Barber</p>
             <ul>
               <li></li>
               <li></li>
@@ -152,10 +163,10 @@
               <li></li>
             </ul>
           </li>
-          <li>
+          <li class="barbers__member">
             <img src="./img/barber3.jpg" alt="our barbers" />
-            <p>Alan Black</p>
-            <p>Extreme Barber</p>
+            <p class="barbers__name">Alan Black</p>
+            <p class="barbers__position">Extreme Barber</p>
             <ul>
               <li></li>
               <li></li>
@@ -164,46 +175,55 @@
             </ul>
           </li>
         </ul>
+        </div>
       </section>
-      <section>
-        <p>In Latin, "barba" means "beard"</p>
-        <h2>Gallery</h2>
-        <img src="./img/gallery1.jpg" alt="our work in barbershop" />
-        <img src="./img/gallery2.jpg" alt="our work in barbershop" />
-        <img src="./img/gallery3.jpg" alt="our work in barbershop" />
-        <img src="./img/gallery4.jpg" alt="our work in barbershop" />
+      <section class="gallery">
+        <div class="container">
+        <p class="gallery__pretitle">In Latin, "barba" means "beard"</p>
+        <h2 class="gallery__title">Gallery</h2>
+        <ul class="gallery__list list">
+          <li class="gallery__item"><img src="./img/gallery1.jpg" alt="our work in barbershop" /></li>
+        <li class="gallery__item"><img src="./img/gallery2.jpg" alt="our work in barbershop" /></li>
+        <li class="gallery__item"><img src="./img/gallery3.jpg" alt="our work in barbershop" /></li>
+        <li class="gallery__item"><img src="./img/gallery4.jpg" alt="our work in barbershop" /></li>
+        </ul>
+        </div>
       </section>
-      <section>
-        <h2>Online-booking</h2>
+      <div class="container">
+      <section class="form">
+        <h2 class="form__title">Online-booking</h2>
       </section>
-      <section>
-        <h2>Contacts</h2>
+      <section class="contacts">
+        <h2 class="contacts__title">Contacts</h2>
         <address>
-          <ul>
-            <li>
-              <a
+          <ul class="contacts__list list">
+            <li class="contacts__item">
+              <a class="contacts__link link"
                 href="https://goo.gl/maps/b8mZ3bDuTdyTP6wMA"
                 target="_blank"
                 rel="noopener, noreferrer nofollow"
                 >st. Vasylkivska, 7A Kiev, 08132</a
               >
             </li>
-            <li><a href="tel:+380441111111">+38 044 111 11 11</a></li>
-            <li>
-              <a href="mailto:barbershop@email.com">barbershop@email.com</a>
+            <li class="contacts__item"><a class="contacts__link link" href="tel:+380441111111">+38 044 111 11 11</a></li>
+            <li class="contacts__item">
+              <a class="contacts__link link" href="mailto:barbershop@email.com">barbershop@email.com</a>
             </li>
           </ul>
         </address>
-        <p>Working hours</p>
-        <p>Every day from 9:00 to 22:00</p>
+        <p class="contacts__suptitle">Working hours</p>
+        <p class="contacts__schedule">Every day from 9:00 to 22:00</p>
       </section>
+      </div>
     </main>
     <footer>
-      <p>&#169;Copyright 2020</p>
-      <ul>
-        <li><a href="" rel="noopener noreferrer nofollow">Instagram</a></li>
-        <li><a href="" rel="noopener noreferrer nofollow">Youtube</a></li>
+      <div class="container">
+      <p class="footer__copyright">&#169;Copyright 2020</p>
+      <ul class="footer__list list">
+        <li class="footer__item"><a class="footer__link link" href="" rel="noopener noreferrer nofollow">Instagram</a></li>
+        <li class="footer__item"><a class="footer__link link" href="" rel="noopener noreferrer nofollow">Youtube</a></li>
       </ul>
+      </div>
     </footer>
   </body>
 </html>
