--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&family=Raleway:wght@700&display=swap" rel="stylesheet">
+   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css" 
+   integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q==" 
+   crossorigin="anonymous" 
+   referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./css/main.min.css" />
   </head>
   <body class="page">
@@ -25,14 +29,14 @@
         </ul>
       </nav>
       <a class="contact" href="tel:+380441111111">+38 044 111 11 11</a>
-      <button class="button" type="button">Online-booking</button>
+      <button class="button btn__header" type="button">Online-booking</button>
       </div>
     </header>
     <main>
       <section class="hero">
         <div class="container">
         <p class="hero__sub-title">A hair salon for men in Kyiv</p>
-        <h1 class="hero__title">BarberShop</h1>
+        <h1 class="hero__title title">BarberShop</h1>
         <p class="hero__text">
           We are experts in trendy men’s haircuts. We work quickly, carefully
           and with style.
@@ -50,7 +54,7 @@
           <li class="about__item"><img src="./img/img_2.jpg" alt="Barbershop haircut" /></li>
         </ul>
         <p class="about__text">About</p>
-        <h2 class="about__title">Best Barbershop in your city</h2>
+        <h2 class="about__title title">Best Barbershop in your city</h2>
         <p class="about__description">
           If you want to add more confidence to your image, you should
           definitely visit us.
@@ -68,7 +72,7 @@
       <section class="prices">
         <div class="container">
         <p class="prices__text"> Spend your time with the best masters</p>
-        <h2 class="prices__title">Services and prices</h2>
+        <h2 class="prices__title title">Services and prices</h2>
         <ul class="prices__list list">
           <li class="prices__item">
             <p class="prices__element">Men’s haircut</p>
@@ -87,21 +91,21 @@
             <p class="prices__sum">from 200 uah.</p>
           </li>
         </ul>
-        <ul>
+        <ul class="prices__list list">
           <li class="prices__item">
-            <p class="prices__element"></p>Trainee’s haircut</p>
+            <p class="prices__element">Trainee’s haircut</p>
             <p class="prices__sum">from 50 uah.</p>
           </li>
           <li class="prices__item">
-            <p class="prices__element"></p>Haircut under the nozzle</p>
+            <p class="prices__element">Haircut under the nozzle</p>
             <p class="prices__sum">from 200 uah.</p>
           </li>
           <li class="prices__item">
-            <p class="prices__element"></p>Children’s haircut (0-12 y.o.)</p>
+            <p class="prices__element">Children’s haircut (0-12 y.o.)</p>
             <p class="prices__sum">from 300 uah.</p>
           </li>
           <li class="prices__item">
-            <p class="prices__element"></p>Camouflage of gray hair</p>
+            <p class="prices__element">Camouflage of gray hair</p>
             <p class="prices__sum">from 200 uah.</p>
           </li>
         </ul>
@@ -129,7 +133,7 @@
           </li>
         </ul>
         <p class="benefits__pretitle">Old traditional school</p>
-        <h2 class="benefits__title">¿Why people come to us?</h2>
+        <h2 class="benefits__title title">¿Why people come to us?</h2>
         <p class="benefits__after-title">
           Only good things are said about us. But it's better to see and feel 1
           time than read 10 times.
@@ -139,7 +143,7 @@
       <section class="barbers">
         <div class="container">
         <p class="barbers__pretitle">For true enjoyers of the atmosphere</p>
-        <h2 class="barbers__title">Our barbers</h2>
+        <h2 class="barbers__title title">Our barbers</h2>
         <ul class="barbers__list list">
           <li class="barbers__member">
             <img src="./img/barber1.jpg" alt="our barbers" />
@@ -180,7 +184,7 @@
       <section class="gallery">
         <div class="container">
         <p class="gallery__pretitle">In Latin, "barba" means "beard"</p>
-        <h2 class="gallery__title">Gallery</h2>
+        <h2 class="gallery__title title">Gallery</h2>
         <ul class="gallery__list list">
           <li class="gallery__item"><img src="./img/gallery1.jpg" alt="our work in barbershop" /></li>
         <li class="gallery__item"><img src="./img/gallery2.jpg" alt="our work in barbershop" /></li>
@@ -191,10 +195,10 @@
       </section>
       <div class="container">
       <section class="form">
-        <h2 class="form__title">Online-booking</h2>
+        <h2 class="form__title title">Online-booking</h2>
       </section>
       <section class="contacts">
-        <h2 class="contacts__title">Contacts</h2>
+        <h2 class="contacts__title title">Contacts</h2>
         <address>
           <ul class="contacts__list list">
             <li class="contacts__item">
